--- a/_posts/2002-05-03-realmess.markdown
+++ b/_posts/2002-05-03-realmess.markdown
@@ -15,7 +15,7 @@ tags:
 
 
 
-![Some of Real's logos, rendered in RealPictureMonopoly 7 format.](/resources/old/real.gif)      SEATTLE, USA - RealNetworks, everyone's favourite media player superpower, has released       yet another proprietary media format: "RealVideo 9." Depending what your       computer is running, you may have to update to "realONE," "RealPlayer 8       with RealVideo 9 support," or no player at all if you use MacOS X, because       they don't know what MacOS X is. This is RealNetworks' newest update to       RealSystem (what they call their software), which now includes RealVideo       9 (the successor to RealVideo 8, which came after G2... we're not sure what       happened to 3-7), RealSystem Producer 9, RealSystem Server and Proxy 8,       RealPlayer 9 for Windows, RealOne Player for Windows, RealJukebox (which       has been integrated into RealOne), RealOne Enterprise, RealPlayer 8 for       UNIX, RealPlayer 8 with RealVideo 9 Support for MacOS 9, and no player at       all for MacOS X (which is based on UNIX).
+![Some of Real's logos, rendered in RealPictureMonopoly 7 format.](/images/old/real.gif)      SEATTLE, USA - RealNetworks, everyone's favourite media player superpower, has released       yet another proprietary media format: "RealVideo 9." Depending what your       computer is running, you may have to update to "realONE," "RealPlayer 8       with RealVideo 9 support," or no player at all if you use MacOS X, because       they don't know what MacOS X is. This is RealNetworks' newest update to       RealSystem (what they call their software), which now includes RealVideo       9 (the successor to RealVideo 8, which came after G2... we're not sure what       happened to 3-7), RealSystem Producer 9, RealSystem Server and Proxy 8,       RealPlayer 9 for Windows, RealOne Player for Windows, RealJukebox (which       has been integrated into RealOne), RealOne Enterprise, RealPlayer 8 for       UNIX, RealPlayer 8 with RealVideo 9 Support for MacOS 9, and no player at       all for MacOS X (which is based on UNIX).
 
 
 
