--- a/_posts/2002-06-25-suckless.markdown
+++ b/_posts/2002-06-25-suckless.markdown
@@ -10,7 +10,7 @@ categories:
 - Sarcastic News
 ---
 
-![Apple's XServe gives enough hard drive space to store 100,000 illegal copies of Devo's 'Whip It'.](/resources/old/xserve.gif)        VANCOUVER, CANADA - The website alteringtime.com was moved to servers at Superb Internet yesterday,         following complaints of outages and general site suckiness. The last straw         was when the site was down for a weekend and got taken out of the search         engines for it. The straw after that was 19 hours (13 for the Forum) of         transferring the site off the old host (while this can also be blamed         on dial up internet). This is planned to be the last move of the site         until it's put onto one of Apple's new XServe servers. "Apple's new server         can have up to 480 GB of hard drive space, which is about one half of         a terabyte, or TB," pointed out one systems analyst. "Seeing as how Altering         Time takes up about 0.000009 of a terabyte, this would be a worthless         expenditure." Allen reportedly responded with, "Screw you, I want my XServe."
+![Apple's XServe gives enough hard drive space to store 100,000 illegal copies of Devo's 'Whip It'.](/images/old/xserve.gif)        VANCOUVER, CANADA - The website alteringtime.com was moved to servers at Superb Internet yesterday,         following complaints of outages and general site suckiness. The last straw         was when the site was down for a weekend and got taken out of the search         engines for it. The straw after that was 19 hours (13 for the Forum) of         transferring the site off the old host (while this can also be blamed         on dial up internet). This is planned to be the last move of the site         until it's put onto one of Apple's new XServe servers. "Apple's new server         can have up to 480 GB of hard drive space, which is about one half of         a terabyte, or TB," pointed out one systems analyst. "Seeing as how Altering         Time takes up about 0.000009 of a terabyte, this would be a worthless         expenditure." Allen reportedly responded with, "Screw you, I want my XServe."
 
    
 
