--- a/_posts/2003-02-07-proof.markdown
+++ b/_posts/2003-02-07-proof.markdown
@@ -13,7 +13,7 @@ tags:
 - America
 ---
 
-![Irrefutable proof.](/resources/old/factory.jpg)
+![Irrefutable proof.](/images/old/factory.jpg)
 UN HEADQUARTERS, BELGIUM - Colin Powell, the US Secretary of State, made a highly professional multimedia presentation yesterday that provides "irrefutable evidence" that Iraq has weapons of mass destruction. He proved that Iraq is linked to terrorists, has highly dangerous weapons, flaunts the United Nations when it suits them, and is lead by an untrustworthy man who has been known to deceive.
 
 
@@ -25,7 +25,7 @@ Luckily for all of us, none of the above could be said about the United States. 
 This irrefutable proof came primarily from high-quality sattelite spying photos that the Americans took of Iraqi facilities. The above photo shows unquestionably a chemical weapons plant, with the vehicles around it marked with arrows. These vehicles are obviously going to take the chemical weapons away, so inspectors won't find them. While some of the other pictures weren't quite as clear as this one, they all clearly show that they're of a building in some country, and that that building could contain dangerous weapons.
 
 
-![Proof that Iraq is linked to terrorists.](/resources/old/terrorists.jpg)
+![Proof that Iraq is linked to terrorists.](/images/old/terrorists.jpg)
 
 
 Even more proof came in the form of an audio recording of two people speaking, of which Colin Powell kindly translated for us. They were Iraqi miltary officials, discussing their deceptive activities. One of the most damning that Powell highlighted went as follows:
