--- a/_posts/2004-01-03-3g.markdown
+++ b/_posts/2004-01-03-3g.markdown
@@ -12,7 +12,7 @@ tags:
 - Cell Phones
 ---
 
-![3g cell phone](/resources/old/3g.jpg)
+![3g cell phone](/images/old/3g.jpg)
 
 
 A consumer study in the UK has come to the shocking conclusion that young people aren't
