--- a/_posts/2002-10-25-ninjas.markdown
+++ b/_posts/2002-10-25-ninjas.markdown
@@ -10,7 +10,7 @@ categories:
 - Sarcastic News
 ---
 
-![Jeremy Hamburger, 10, ingesting a frisbee.](/resources/old/seppuku.jpg)   LOS ANGELES, CA, USA - Robert Hamburger,   an American child, is being sued by a mother   in South Carolina whom he has never met. The grounds for her case is   his web site, Real Ultimate Power (as seen in our [WTF   Sites](/fun/wtf/?id=9) months ago.) Robert, pictured left, stated on his website,   "I guess if you can win a lawsuit for spilling hot coffee on your   lap or smoking cigarettes that you thought were good for you, you can   sue for anything."
+![Jeremy Hamburger, 10, ingesting a frisbee.](/images/old/seppuku.jpg)   LOS ANGELES, CA, USA - Robert Hamburger,   an American child, is being sued by a mother   in South Carolina whom he has never met. The grounds for her case is   his web site, Real Ultimate Power (as seen in our [WTF   Sites](/fun/wtf/?id=9) months ago.) Robert, pictured left, stated on his website,   "I guess if you can win a lawsuit for spilling hot coffee on your   lap or smoking cigarettes that you thought were good for you, you can   sue for anything."
 
 Margerie Evans, a mother of three,   blames Robert for her children's misbehaving and violence. In Margerie's   hate email, (Robert publicly posts the best hate mail he receives,)   she says things like, "You are a disgrace to the whites, if you're   white," and "My second born son has been, as you call it,   'flipping out' recently and he started doing so around the same time   the boys discovered your site." She expects they'll now end up   "in jail or even juvenile hall." The state of a child who   will become a criminal merely from reading a website about ninjas being   cool and how they get really mad and flip out is questionable. Altering   Time's resident child psychology expert said, "If your kids can't   stay sane after seeing another kid eat a frisbee, I think you should   be sued as a mother."
 
