--- a/_posts/2002-11-30-asylum.markdown
+++ b/_posts/2002-11-30-asylum.markdown
@@ -13,7 +13,7 @@ tags:
 - Political Asylum
 ---
 
-![A cheap early logo of the game.](/resources/old/asylum.gif)
+![A cheap early logo of the game.](/images/old/asylum.gif)
 LANGLEY, BC, CANADA - The effects of working on Political Asylum, the low budget web-based game being developed by Allen Pike, will soon send him to an asylum. Based on a gritty view of politics and fueled by group competitive spirit, previews of the game will be available soon after the new year. With university exams, working 30 hours a week, and upkeeping one of the 300,000 most popular sites in the world, Allen's sanity is being questioned.
 
 
