--- a/_posts/2014-07-30-six-years.markdown
+++ b/_posts/2014-07-30-six-years.markdown
@@ -4,6 +4,7 @@ comments: true
 date: 2014-07-30 23:00:00
 layout: post
 slug: "six-years"
+summary: "The App Store matures."
 title: "A lot can change in 6 years"
 categories:
 - Article
