--- a/_posts/2020-01-16-two-spies.markdown
+++ b/_posts/2020-01-16-two-spies.markdown
@@ -9,7 +9,7 @@ categories:
 tags:
 ---
 
-[Two Spies](https://playspies/), the turn-based spy strategy game I've been iterating on and off for ages, is [now live](https://apps.apple.com/us/app/two-spies/id1466304408)! So far, the initial reception has kind of blown us away: almost a million rounds played, featured by Apple in 100 countries, hit top 25 board and strategy games, more than a thousand five star reviews already.
+[Two Spies](https://playspies.com/), the turn-based spy strategy game I've been iterating on and off for ages, is [now live](https://apps.apple.com/us/app/two-spies/id1466304408)! So far, the initial reception has kind of blown us away: almost a million rounds played, featured by Apple in 100 countries, hit top 25 board and strategy games, more than a thousand five star reviews already.
 
 Admittedly, I try not to put too much stock in app reviews. Once in a blue moon though, when the stars align, they can be a source of positivity. For example, I did enjoy [this recent one](https://appfigures.com/reviews/281857623339LkYH1-yJbyeVpDIJtMxhYyw):
 
