Reformatted links, and added Two Spies post. (#21)
* Started reformatting link posts.
* Added Two Spies post.
* Fixed typo.

--- a/_posts/2019-01-12-fun-fact.markdown
+++ b/_posts/2019-01-12-fun-fact.markdown
@@ -9,6 +9,6 @@ categories:
 tags:
 ---
 
-A new podcast where every other Friday, Arik Devens and I discuss a variety of fun facts. They range from historical, to practical, to garburetor-related. It's fun.
+[Fun Fact](https://funfact.fm/subscribe/) is a new podcast where, every other Friday, Arik Devens and I discuss a variety of fun facts. They range from historical, to practical, to garburetor-related. It's fun.
 
 *This year, in addition to my typical longer articles, I'll also post some simple links from time to time. This is one of those.*
