--- a/_posts/2020-06-30-secret.markdown
+++ b/_posts/2020-06-30-secret.markdown
@@ -11,18 +11,19 @@ categories:
 
 ---
 
-Two weeks ago, news broke that Apple had rejected the iOS version of Hey, Basecamp’s highly anticipated new email product. The reasoning? Like many apps on iOS, Hey didn’t support Apple’s in-app purchase system. Hey’s app would previously have been approved, but a recent change to the secret rules – not the public guidelines, but the actual policies Apple uses to selectively enforce those guidelines – resulted in a surprise rejection.
+Two weeks ago, news broke that Apple rejected the iOS version of Hey, Basecamp’s highly anticipated new email product. The reasoning? Like many apps on iOS, Hey didn’t support Apple’s in-app purchase system. Not long ago, Hey’s app would have been approved, but a recent change to the secret rules – not the public guidelines, but the actual policies Apple uses to selectively enforce those guidelines – resulted in a surprise rejection.
 
-As he often does, Michael Tsai compiled quotes from various articles and stories that resulted. The first comments were from pundits and observers, but they quickly gave way to [a catalogue of greivances, a litany of unpleasant surprises and weird injustices developers have suffered over years of App Review](https://mjtsai.com/blog/2020/06/16/hey-rejected-from-the-app-store/).
+As he often does, Michael Tsai compiled quotes from various articles and stories that resulted. The first comments were from pundits and observers, but they quickly gave way to [a catalogue of greivances, a litany of unpleasant surprises, and compendium of weird injustices developers have suffered over years of App Review](https://mjtsai.com/blog/2020/06/16/hey-rejected-from-the-app-store/).
 
-<img src="/images/2020/developer-blown.jpg" >
+<img src="/images/2020/developer-blown-wide.jpg" >
 
 In response to the ensuing bad press, Apple allowed Hey onto iOS – despite it still violating the guidelines – and announced that [developers will be getting a mechanism to challenge Apple’s review guidelines](https://www.apple.com/newsroom/2020/06/apple-reveals-new-developer-technologies-to-foster-the-next-generation-of-apps/).
 
 Which is definitely something. The idea seems to be that Hey will have a chance to challenge Apple’s public guideline about multi-platform apps:
 
 >  Apps that operate across multiple platforms may allow users to access content, subscriptions, or features they have acquired elsewhere, including consumable items in multi-platform games, provided those items are also available as in-app purchases within the app.
-> — App Store Guidelines, 3.1.3(b)
+> 
+> — [App Store Guidelines](https://developer.apple.com/app-store/review/guidelines/), 3.1.3(b)
 
 While that guideline will surely be challenged, most of the things worth reconsidering about App Review are not part of the public guidelines. Is Apple planning to give Hey a mechanism to challenge the secret rule that says Hey needs to follow the IAP guideline, but that Slack doesn’t? What about the policy that iOS apps can’t be distributed directly to customers? Or Apple’s approach of quietly changing the undocumented approval policies, without notifying people that apps that used to be approved will now be rejected?
 
