--- a/_posts/2020-06-30-secret.markdown
+++ b/_posts/2020-06-30-secret.markdown
@@ -25,7 +25,7 @@ Which is definitely something. The idea seems to be that Hey will have a chance 
 > 
 > — [App Store Guidelines](https://developer.apple.com/app-store/review/guidelines/), 3.1.3(b)
 
-While that guideline will surely be challenged, most of the things worth reconsidering about App Review are not part of the public guidelines. Is Apple planning to give Hey a mechanism to challenge the secret rule that says Hey needs to follow the IAP guideline, but that Slack doesn’t? What about the policy that iOS apps can’t be distributed directly to customers? Or Apple’s approach of quietly changing the undocumented approval policies, without notifying people that apps that used to be approved will now be rejected?
+While controversial guidelines like this will surely be challenged, it seems that the things most worth reconsidering about App Review are not part of the public guidelines. Will Hey be able to challenge the secret rule that says they need to follow the IAP guideline, but that Slack doesn’t? What about the policy that iOS apps can’t be distributed directly to customers? Or Apple’s habit of quietly changing the undocumented approval policies, without notifying people that apps that used to be approved will now be rejected?
 
 Or the existence of secret App Store policies at all?
 
