Gotta squash these notes

--- a/_posts/2020-06-30-secret.markdown
+++ b/_posts/2020-06-30-secret.markdown
@@ -29,7 +29,7 @@ While controversial guidelines like this will surely be challenged, it seems tha
 
 Or the existence of secret App Store policies at all?
 
-I suspect not. Chances are, iOS app development will continue to depend on reading tea leaves and following other developers’ tales of rejection to predict what apps can and can’t be distributed these days.
+I suspect not. Chances are, iOS app development will continue to depend on reading tea leaves and following other developers’ tales of rejection, balancing paranoia and experimentation in an attempt to predict what apps can and can currently be distributed.
 
 But hey, a developer can dream.
 
