--- a/_posts/2020-06-30-secret.markdown
+++ b/_posts/2020-06-30-secret.markdown
@@ -19,11 +19,7 @@ As he often does, Michael Tsai compiled quotes from various articles and stories
 
 In response to the ensuing bad press, Apple allowed Hey onto iOS – despite it still violating the guidelines – and announced that [developers will be getting a mechanism to challenge Apple’s review guidelines](https://www.apple.com/newsroom/2020/06/apple-reveals-new-developer-technologies-to-foster-the-next-generation-of-apps/).
 
-Which is definitely something. The idea seems to be that Hey will have a chance to challenge Apple’s public guideline about multi-platform apps:
-
->  Apps that operate across multiple platforms may allow users to access content, subscriptions, or features they have acquired elsewhere, including consumable items in multi-platform games, provided those items are also available as in-app purchases within the app.
-> 
-> — [App Store Guidelines](https://developer.apple.com/app-store/review/guidelines/), 3.1.3(b)
+Which is definitely something. The idea seems to be that Hey will have a chance to challenge Apple’s public guideline about multi-platform apps, which says that apps can only allow users to access content, subscriptions, or features they have acquired elsewhere if they are also available via IAP.
 
 While controversial guidelines like this will surely be challenged, it seems that the things most worth reconsidering about App Review are not part of the public guidelines. Will Hey be able to challenge the secret rule that says they need to follow the IAP guideline, but that Slack doesn’t? What about the policy that iOS apps can’t be distributed directly to customers? Or Apple’s habit of quietly changing the undocumented approval policies, without notifying people that apps that used to be approved will now be rejected?
 
