--- a/_posts/2020-06-30-secret.markdown
+++ b/_posts/2020-06-30-secret.markdown
@@ -21,11 +21,11 @@ In response to the ensuing bad press, Apple allowed Hey onto iOS – despite it 
 
 Which is definitely something. The idea seems to be that Hey will have a chance to challenge Apple’s public guideline about multi-platform apps, which says that apps can only allow users to access content, subscriptions, or features they have acquired elsewhere if they are also available via IAP.
 
-While controversial guidelines like this will surely be challenged, it seems that the things most worth reconsidering about App Review are not part of the public guidelines. Will Hey be able to challenge the secret rule that says they need to follow the IAP guideline, but that Slack doesn’t? What about the policy that iOS apps can’t be distributed directly to customers? Or Apple’s habit of quietly changing the undocumented approval policies, without notifying people that apps that used to be approved will now be rejected?
+While controversial guidelines like this will surely be challenged, it seems that the things most worth reconsidering about App Review aren't even part of the public guidelines. Will Hey be able to challenge the secret rule that says they need to follow the IAP guideline, but that Slack doesn’t? What about the policy that iOS apps can’t be distributed directly to customers? Or Apple’s habit of quietly changing the undocumented approval policies, without notifying people that apps that used to be approved will now be rejected?
 
 Or the existence of secret App Store policies at all?
 
-I suspect not. Chances are, iOS app development will continue to depend on reading tea leaves and following other developers’ tales of rejection, balancing paranoia and experimentation in an attempt to predict what apps can and can currently be distributed.
+I suspect not. Chances are, iOS app development will continue to depend on reading tea leaves and following other developers’ tales of rejection, balancing paranoia and experimentation in an attempt to predict what apps can and can't be distributed on iOS these days.
 
 But hey, a developer can dream.
 
