--- a/_posts/2020-06-30-secret.markdown
+++ b/_posts/2020-06-30-secret.markdown
@@ -3,7 +3,7 @@ author: allen
 date: "2020-06-30 8:00:00 -08:00"
 layout: post
 title: "The Secret Rules of iOS Development"
-summary: "A glimmer of hope that change is coming."
+summary: "Undocumented rules make for unpleasant surprises."
 image: "/images/2020/developer-blown.jpg"
 tags:
 categories:
