Image layout experimentation

--- a/_posts/2023-09-30-dialup.md
+++ b/_posts/2023-09-30-dialup.md
@@ -22,8 +22,9 @@ As archaic as this may seem, it was a major improvement over what came before, w
 
 The internet was so compelling, even in the early days, that subscription numbers grew wildly. Exuberantly. Running an ISP in 1999 was an intense but desirable job: all the graphs were going up and to the right. Fulfilling this prodigious demand, however, was tough: all those inbound calls could only be served if you had enough physical phone lines.
 
-<img src="/images/2023/dialup-chart.png">
-<div class="centered"><p>Pictured: Dialup subscription numbers going to the moon</p></div>
+<div class="centered">
+<img src="/images/2023/dialup-chart.png" style="max-width: 455px">
+<p>Pictured: Dialup subscription numbers going to the moon</p></div>
 
 That’s right – dialup required a separate physical phone line for every connected device. If this seems pretty bonkers, it was. The relentless flood of signups required wiring up new phone lines at unprecedented rates. Unused lines were an expensive waste, but insufficient lines meant people trying to connect would get a busy signal. Let that happen, and your customers are prone to cancel and go to a competing ISP who paid for more phone lines.
 
@@ -31,8 +32,9 @@ So let’s say you’re an ISP in 1999 called… Dialup World. You might look at
 
 Unfortunately for you, before long it would stop being 1999.
 
-<img src="/images/2023/dialup-broadband-chart.png">
-<div class="centered"><p>Pictured: Dialup subscription numbers getting fucking crushed by broadband</p></div>
+<div class="centered">
+  <img src="/images/2023/dialup-broadband-chart.png" style="max-width: 455px">
+<p>Pictured: Dialup subscription numbers getting fucking crushed by broadband</p></div>
 
 
 Fast forward a couple years. You realize you’ve way over-projected, the telco has already built the lines and is demanding payment, you can’t pivot to broadband fast enough, your lenders are very suspicious, and you’re headed for the wood chipper. “Dialup ISP. 20,000 customers, 40,000 phone lines. As is, all sales final.”
