--- a/_posts/2023-09-30-dialup.md
+++ b/_posts/2023-09-30-dialup.md
@@ -67,7 +67,7 @@ While the deluge did abate after a few weeks, a new type of complaint slowly ros
 
 They were always former Dialup World accounts. And they always had a contentious billing complaint. At first I thought these might be people whose passwords we’d reset and were angry we were still charging them, but no. Over time the picture became clearer. We were all getting multiple calls and emails a day with a variant of the same story: “I canceled my Dialup World account a long time ago, who are you and why the fork are you billing me.” Something had gone wrong.
 
-Now, when you work somewhere and something doesn’t make sense, it pays to be curious. (If you don’t work somewhere that rewards curiosity, find somewhere else to work.) Sometimes you’ll investigate a problem and find that the system is relatively reasonable – you simply didn’t understand it. Other times, you’ll learn about something delightfully and poetically dysfunctional, as I did the day I learned about Dialup World’s former billing system.
+Now, when something doesn’t make sense, it pays to be curious. (If you don’t work somewhere that rewards curiosity, find somewhere else to work.) Sometimes you’ll investigate a mystery and find that the underlying systems are reasonable – you simply didn’t understand them yet. Other times, you’ll uncover something delightfully and poetically dysfunctional, as I did the day I learned about Dialup World’s former billing system.
 
 ## A devilishly simple billing system
 
